--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -1,162 +1,286 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterStudentActivity"
-    android:padding="16dp">
+    tools:context=".RegisterStudentActivity">
 
-    <!-- TÍTULO -->
-    <TextView
-        android:id="@+id/txtDadosPessoais"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dados Pessoais"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/edtNome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Nome completo"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@id/txtDadosPessoais"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <EditText
-        android:id="@+id/edtCpf"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="CPF"
-        android:inputType="number"
-        android:maxLength="11"
-        app:layout_constraintTop_toBottomOf="@id/edtNome"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
-
-    <TextView
-        android:id="@+id/txtSexo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sexo"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/edtCpf"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <RadioGroup
-        android:id="@+id/rgSexo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/txtSexo"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <RadioButton
-            android:id="@+id/rbMasculino"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Masculino" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <RadioButton
-            android:id="@+id/rbFeminino"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Feminino" />
-    </RadioGroup>
+            <!-- ================= DADOS PESSOAIS ================= -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="1. Dados Pessoais"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
 
-    <EditText
-        android:id="@+id/edtNacionalidade"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Nacionalidade"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/rgSexo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <EditText
+                android:id="@+id/edtNome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nome completo"/>
 
-    <EditText
-        android:id="@+id/edtNaturalidade"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Naturalidade (UF)"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/edtNacionalidade"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <EditText
+                android:id="@+id/edtCpf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="CPF"
+                android:inputType="number"/>
 
-    <TextView
-        android:id="@+id/txtDocumento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Documento"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/edtNaturalidade"
-        app:layout_constraintStart_toStartOf="parent" />
+            <RadioGroup
+                android:id="@+id/rgSexo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <RadioGroup
-        android:id="@+id/rgDocumento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/txtDocumento"
-        app:layout_constraintStart_toStartOf="parent">
+                <RadioButton
+                    android:id="@+id/rbMasculino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Masculino"/>
 
-        <RadioButton
-            android:id="@+id/rbRG"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RG" />
+                <RadioButton
+                    android:id="@+id/rbFeminino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Feminino"/>
+            </RadioGroup>
 
-        <RadioButton
-            android:id="@+id/rbCIN"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CIN" />
-    </RadioGroup>
+            <EditText
+                android:id="@+id/edtNacionalidade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nacionalidade"/>
 
-    <EditText
-        android:id="@+id/edtNumeroDocumento"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="Número do RG ou CIN"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rgDocumento" />
+            <EditText
+                android:id="@+id/edtNaturalidade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Naturalidade"/>
 
+            <RadioGroup
+                android:id="@+id/rgDocumento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnSalvar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="Salvar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroDocumento" />
+                <RadioButton
+                    android:id="@+id/rbRG"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="RG"/>
 
-    <Button
-        android:id="@+id/btnVoltar"
-        android:layout_width="381dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:text="Voltar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnSalvar" />
+                <RadioButton
+                    android:id="@+id/rbCIN"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CIN"/>
+            </RadioGroup>
 
+            <EditText
+                android:id="@+id/edtNumeroDocumento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Número do documento"/>
+
+            <!-- ================= DADOS DE CONTATO ================= -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="2. Dados de Contato"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
+
+            <EditText
+                android:id="@+id/edtTelefoneResidencial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Telefone residencial"/>
+
+            <EditText
+                android:id="@+id/edtTelefoneComercial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Telefone comercial"/>
+
+            <EditText
+                android:id="@+id/edtCelular"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Celular"/>
+
+            <EditText
+                android:id="@+id/edtEmailInstitucional"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="E-mail institucional"/>
+
+            <EditText
+                android:id="@+id/edtEmailPessoal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="E-mail pessoal"/>
+
+            <EditText
+                android:id="@+id/edtEmergenciaNome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Contato de emergência - Nome"/>
+
+            <EditText
+                android:id="@+id/edtEmergenciaRelacionamento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Grau de relacionamento"/>
+
+            <EditText
+                android:id="@+id/edtEmergenciaTelefone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Telefone de emergência"/>
+
+            <!-- ================= ENDEREÇO ================= -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="3. Endereço"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
+
+            <EditText
+                android:id="@+id/edtCep"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="CEP"/>
+
+            <EditText
+                android:id="@+id/edtTipoLogradouro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Tipo de logradouro"/>
+
+            <EditText
+                android:id="@+id/edtLogradouro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Endereço"/>
+
+            <EditText
+                android:id="@+id/edtNumero"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Número"/>
+
+            <EditText
+                android:id="@+id/edtComplemento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Complemento"/>
+
+            <EditText
+                android:id="@+id/edtBairro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Bairro"/>
+
+            <EditText
+                android:id="@+id/edtCidade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Cidade"/>
+
+            <EditText
+                android:id="@+id/edtEstado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Estado (UF)"/>
+
+            <EditText
+                android:id="@+id/edtPais"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="País"/>
+
+            <!-- ================= DADOS DA UNIDADE ================= -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="4. Dados da Unidade"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
+
+            <EditText
+                android:id="@+id/edtNumeroUnidade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Número da unidade"/>
+
+            <EditText
+                android:id="@+id/edtNomeUnidade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nome da unidade"/>
+
+            <EditText
+                android:id="@+id/edtRa"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="RA"/>
+
+            <EditText
+                android:id="@+id/edtCurso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Curso"/>
+
+            <EditText
+                android:id="@+id/edtSemestreAtual"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Semestre atual"/>
+
+            <EditText
+                android:id="@+id/edtPeriodoCurso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Período do curso"/>
+
+            <EditText
+                android:id="@+id/edtIngresso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Semestre/Ano de ingresso"/>
+
+            <!-- ================= BOTÕES ================= -->
+            <Button
+                android:id="@+id/btnSalvar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Salvar"/>
+
+            <Button
+                android:id="@+id/btnVoltar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Voltar"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
